# gtseq-pipeline

./: .gitignore  README.md  pyproject.toml  sample_template.csv
.github/workflows/: test.yml
lougheed_gtseq/: barcodes.py  combine_sex_markers.py  download_ref.py  entry.py  generate_fastq.py  logger.py  models.py  pipeline.py  samples.py  snp_success.py  split_fasta.py  utils.py
lougheed_gtseq/alleles/: polar.sl.csv  polar.tsv
lougheed_gtseq/steps/: call_alleles.py  call_sex_markers.py  download_ref.py  fastq_align.py  fastq_generate.py  fastq_split.py  load_samples.py  reheader.py  run_qc.py
tests/: test_barcodes.py
