[tool.poetry]
name = "lougheed-gtseq"
version = "0.1.0"
description = "GTseq pipeline for the Lougheed Lab."
authors = ["David Lougheed <david.lougheed@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pysam = "^0.22.1"
pydantic = "^2.7.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
