[tool.poetry]
name = "lougheed-gtseq"
version = "0.1.0"
description = "GTseq pipeline for the Lougheed Lab."
authors = ["David Lougheed <david.lougheed@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{ include = "lougheed_gtseq" }]
include = [
    "lougheed_gtseq/alleles/*.csv",
    "lougheed_gtseq/alleles/*.tsv",
]

[tool.poetry.scripts]
lougheed-gtseq = "lougheed_gtseq.entry:main"

[tool.poetry.dependencies]
python = "^3.10"
pysam = "^0.22.1"
pydantic = "^2.7.1"
requests = "^2.31.0"
termplotlib = "^0.3.9"
numpy = "^1.26.4"
matplotlib = "^3.9.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
